--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </div>
 
     <button onclick="calcular()">Resultado</button>
+    <button id="borrar" onclick="limpiar()">Limpiar</button>
     <script src="index.js"></script>
 </body>
 
